[tool.poetry]
name = "chapicha"
version = "0.2.0"
description = "A semi-automated image editing tool"
authors = ["Julius Kibunjia <kibunjiajulius@gmail.com>"]
license = "MIT"
repository = "https://github.com/julius383/chapicha.git"
homepage =  "https://github.com/julius383/chapicha"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
numpy = "^1.20.2"
opencv-python = "^4.5.1"
rich = "^10.1.0"
pytesseract = "^0.3.7"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chapicha = "chapicha.cli:main"
